@@ -1,6 +1,7 @@
 package tinyfingers.simplilearn.foodieapp.controller;
 
 
+import io.micrometer.common.util.StringUtils;
 import jakarta.annotation.Nullable;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
@@ -8,71 +9,70 @@ import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import tinyfingers.simplilearn.foodieapp.model.api.Cart;
-import tinyfingers.simplilearn.foodieapp.model.api.CartItem;
+import tinyfingers.simplilearn.foodieapp.mapper.DomainApiMapper;
+import tinyfingers.simplilearn.foodieapp.model.api.CartAPI;
+import tinyfingers.simplilearn.foodieapp.service.CartService;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 @RequiredArgsConstructor
 @RequestMapping("/api")
 @Slf4j
 @RestController
-@CrossOrigin(value = "http://localhost:4200", allowCredentials = "true")
 public class CartController {
 
-  private static Map<String, Cart> carts = new HashMap<>();
+  private final DomainApiMapper domainApiMapper;
 
-  @GetMapping("/carts/{cardId}")
-  public ResponseEntity<Cart> getCart(@PathVariable("cardId") String cardId, @RequestParam @Nullable String userId, HttpSession session) {
+  private final CartService cartService;
+
+  @GetMapping("/cart")
+  public ResponseEntity<CartAPI> getCart(@RequestHeader("userId") @Nullable String userId, HttpSession session) {
     String identifier = userId == null ? session.getId() : userId;
-    log.info("Get cart with id {} for userId {} and sessionId {}. Use identifier {} ", cardId, userId, session.getId(), identifier);
 
-    if (!carts.isEmpty()) {
-      return ResponseEntity.ok(carts.get(identifier));
-    }
+    log.info("Get cart for userId {} and sessionId {}. Use identifier {} ", userId, session.getId(), identifier);
 
-    val cart = new Cart();
-    val cartItems = List.of(
-            new CartItem(1L, 1, "Pizza", 6.90),
-            new CartItem(2L, 2, "Coca-Cola", 2.50));
-    cart.setCardItems(cartItems);
-    cart.setUserId("user1");
-
-    return ResponseEntity.ok(cart);
+    return ResponseEntity.ok(cartService.getCart(identifier));
   }
 
   @GetMapping("/carts")
-  public ResponseEntity<List<Cart>> getAllCarts(HttpSession session) {
-    return ResponseEntity.ok(carts.values().stream().toList());
+  public ResponseEntity<List<CartAPI>> getAllCarts(HttpSession session) {
+    return ResponseEntity.ok(cartService.getCarts().stream().map(domainApiMapper::map).toList());
+  }
+
+  @GetMapping("/cart/init")
+  public ResponseEntity<CartAPI> initCart(@RequestHeader("userId") @Nullable String userId, @RequestParam("restaurantId") Long restaurantId, HttpSession session) {
+    log.info("initCart for userId {} and sessionId {}", userId, session.getId());
+    return ResponseEntity.ok(cartService.initCart(restaurantId, userId, session.getId()));
   }
 
   @PostMapping("/cart")
-  public ResponseEntity<Cart> createCart(@RequestBody Cart cart, @RequestParam @Nullable String userId, HttpSession session) {
-    if (userId != null && !userId.isBlank()) {
-      cart.setSessionId(session.getId());
+  public ResponseEntity<CartAPI> createCart(@RequestBody CartAPI cartAPI, @RequestParam @Nullable String userId, HttpSession session) {
+
+    if (StringUtils.isBlank(userId)) {
+      cartAPI.setSessionId(session.getId());
     } else {
-      cart.setUserId(userId);
+      cartAPI.setUserId(userId);
     }
-    String identifier = userId == null ? session.getId() : userId;
-    carts.put(identifier, cart);
-    log.info("Registered cart {} for identifier {}", cart, identifier);
-    return ResponseEntity.ok(cart);
+    val identifier = StringUtils.isBlank(userId) ? session.getId() : userId;
+
+    log.info("Create cart for userId {} and sessionId {}. Use identifier {} ", userId, session.getId(), identifier);
+
+    return ResponseEntity.ok(cartService.createCart(identifier, cartAPI));
   }
 
-  @PostMapping("/carts/clear")
-  @ResponseStatus(HttpStatus.OK)
-  public void clearCart() {
-    carts.clear();
+  @DeleteMapping("/carts")
+  @ResponseStatus(HttpStatus.ACCEPTED)
+  public void clearCart(@RequestHeader("userId") @Nullable String userId, HttpSession session) {
+    val identifier = StringUtils.isBlank(userId) ? session.getId() : userId;
+    cartService.deleteCart(identifier);
   }
 }
